/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.ady.tournamentmanager.data.tournament

import kotlinx.coroutines.flow.Flow

/**
 * Repozitar ktory zabezpecuje pracu s tabulkou [Tournament] v databaze
 */
interface TournamentRepository {

    fun getAllItemsStream(): Flow<List<Tournament>>

    fun getItemStream(id: Int): Flow<Tournament?>

    suspend fun insertItem(tournament: Tournament)

    suspend fun deleteItem(tournament: Tournament)

    suspend fun updateItem(tournament: Tournament)
}
