package com.ady.tournamentmanager.ui.navigation

/**
 * Interface sluziaci pre ukladanie navigacnych dat
 */
interface NavigationDestination {
    val route: String
    val titleRes: Int
}
